# steel-lockin-analysis

./: .gitignore  GPST_plotting.Rmd  README.md  analysemif.Rmd  calc_REMIND_costs.Rmd  calc_abatementcosts.Rmd  checksteelcap.Rmd  info_df.xlsx  plotBioShare.Rmd  plotFig3.Rmd  plotSteelLCOE.Rmd  plot_figures.Rmd  plot_figures.html
RIKEN/: analysemifRIKEN.Rmd  plotSteelLCOERIKEN.Rmd
analysis/: plotFig3.Rmd  plot_abatement_costs.Rmd  plot_figures.Rmd
analysis/R/: abatement_costs.R  emission_cascade_plots.R  investment_costs.R  lco_analysis.R  plant_level_data_analysis.R  steel_production_plots.R  supp_and_ext_plots.R
analysis/python/: analyse_data.py  clean_data.py  load_data.py  load_data_correction.py  pyproject.toml  run_bof_capacity_calculation.py  test.py
inputdata/gem/: BOF_capacity_perREMINDregion.csv  age_distribution.csv  age_distribution_regions.csv  global_BOFcap.csv  summary_table.csv
inputdata/gspt/: BOF_capacity_perREMINDregion.csv  age_distribution.csv  age_distribution_regions.csv  global_BOFcap.csv  global_BOFcap_15yrelining.csv  production.csv
inputdata/other/: lcop_avg_fast_transition.csv  lcop_avg_fasttrans.csv  lcop_avg_lockin.csv  lcop_avg_npi.csv  lcop_avg_transition_with_lock-in.csv  lcop_avg_transition_with_lock-in_650.csv  primary_steel_prod_default.csv
inputdata/python_source/: Iron-unit-data-Global-Iron-and-Steel-Tracker-March-2025-V1.xlsx  Missing_information.xlsx
inputdata/worldsteel/: bof_production.csv  eaf_production.csv  other_production.csv
