[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["clarabachorz <clara.bachorz@pik-potsdam.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.3"
pandas = "^2.3.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
